<resources>
    <string name="app_name">Aplicacion ToDo List</string>
    <string name="login">Login</string>
    <string name="username">username</string>
    <string name="password">Password</string>
    <string name="this_field_is_required">error</string>
    <string name="action_new">action_new</string>
    <string name="action_refresh">action_refresh</string>
    <string name="action_logout">action_logout</string>
    <string name="action_settings">action_settings</string>
    <string name="what_needs">what_needs</string>
    <string name="Done">Done</string>
    <string name="add_todo">add_todo</string>
</resources>
