<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNewToDo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="206dp"
        tools:layout_editor_absoluteY="148dp">

        <EditText
            android:id="@+id/txtContent"
            android:hint="@string/what_needs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <CheckBox
            android:id="@+id/cboxDone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Done" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_todo" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>