<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="117dp"
        tools:layout_editor_absoluteY="220dp" >

        <EditText
            android:id="@+id/txtUser"
            android:hint="@string/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="" />

        <EditText
            android:id="@+id/txtPassword"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:text="" />

        <Button
            android:id="@+id/btnLogin"
            android:text="@string/login"
            android:layout_marginTop="50dp"
            android:background="@drawable/todo_button_selector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>



    /LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
